fix backround on small skreen

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,6 @@
 
 .App {
   text-align: center;
-  background: var(--light-green);
-  height: 100vh;
   padding: 100px;
 }
 
